# BlindEngine

./: .gitignore  CMakeLists.txt  README.md
include/glad/: gl.h
src/: main.cpp  texture2d.cpp
tools/compress_img/: compress_img.cpp  compress_img.h
